WIP: adding auth

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,16 @@
-DATABASE_URL=postgresql://admin:test123@localhost:5432/codequest?schema=public
-
 # --- Database Configuration (PostgreSQL) ---
 DB_NAME=codequest
 DB_USER=admin
 DB_PASSWORD=test123
 DB_PORT=5432
+
+
+# --- AUTH ---
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:4321 # Base URL of your app
+
+
+# --- OAuth Providers ---
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
 
