--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "*/"],
+  "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"],
   "compilerOptions": {
     "plugins": [
@@ -10,9 +10,7 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@": [
-        "src/"
-      ]
+      "@*": ["src/*"]
     }
   }
 }
