--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.9.2"
   }
 }
