--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.1",
     "@astrojs/vercel": "^8.2.7",
     "@prisma/client": "^6.15.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
