--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "seed": "ts-node ./seed/seed-categories.ts"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.1",
     "@astrojs/vercel": "^8.2.7",
     "@prisma/client": "^6.15.0",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
     "astro": "^5.13.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -26,6 +25,9 @@
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9"
   }
 }
