doc(env): add new required variables

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,11 @@ DB_USER=admin
 DB_PASSWORD=test123
 DB_PORT=5432
 DATABASE_URL=postgresql://admin:test123@localhost:5432/codequest?schema=public
+
+# --- AUTH ---
+BETTER_AUTH_URL=http://localhost:4321 # Base URL of your app
+BETTER_AUTH_SECRET=h1XzZZFwiVuyu5qeOA6aMbfGACJw38Ds
+
+# --- OAuth Providers ---
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
