ci(env): Added variables of the cloudinary

--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,8 @@ BETTER_AUTH_SECRET=h1XzZZFwiVuyu5qeOA6aMbfGACJw38Ds
 # --- OAuth Providers ---
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+
+CLOUDINARY_CLOUDNAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
