--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.7",
     "better-auth": "^1.3.9",
+    "marked": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
@@ -23,12 +24,13 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@tailwindcss/typography": "^0.5.18",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9"
+    "typescript": "^5.9.2"
   }
 }
