--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@astrojs/react": "^4.3.1",
     "@astrojs/vercel": "^8.2.7",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
     "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.13.7",
-    "better-auth": "^1.3.9",
+    "astro": "^5.13.9",
+    "better-auth": "^1.3.13",
+    "cloudinary": "^2.7.0",
     "marked": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.63.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
@@ -27,9 +28,9 @@
     "@tailwindcss/typography": "^0.5.18",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
