--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vercel": "^8.2.7",
     "@prisma/client": "^6.16.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@uiw/react-md-editor": "^4.0.8",
     "astro": "^5.13.9",
     "better-auth": "^1.3.13",
     "cloudinary": "^2.7.0",
