chore(env): update .env.template with Cloudinary configuration and Better Auth details

--- a/.env.template
+++ b/.env.template
@@ -7,13 +7,18 @@ DATABASE_URL=postgresql://admin:test123@localhost:5432/codequest?schema=public
 
 # --- AUTH ---
 BETTER_AUTH_URL=http://localhost:4321 # Base URL of your app
+# https://www.better-auth.com/
+# Generate secret with: openssl rand -base64 32
 BETTER_AUTH_SECRET=h1XzZZFwiVuyu5qeOA6aMbfGACJw38Ds
 
 # --- OAuth Providers ---
+# https://discord.com/developers
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-
+## --- Cloudinary Configuration ---
+# You can find your Cloudinary credentials in the Cloudinary Dashboard
+# https://cloudinary.com/documentation/developer_onboarding_faq_find_credentials
 CLOUDINARY_CLOUDNAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
