fix: update comment in .env.template to clarify PostgreSQL database setup

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 # --- Database Configuration (PostgreSQL) ---
+# You can use this credentials to set up a local PostgreSQL database
 DB_NAME=codequest
 DB_USER=admin
 DB_PASSWORD=test123
